adding modal and other stuff
